# madmac

./: .gitignore  CLAUDE.md  Makefile  PROJECT.md  TESTING.md
.claude-flow/: CAPABILITIES.md  config.yaml
.claude-flow/metrics/: learning.json  swarm-activity.json  v3-progress.json
.claude-flow/security/: audit-status.json
homebrew/: macmd.rb  madmac.rb
macmd-app/: Info.plist  project.yml
macmd-app/Resources/: AppIcon.icns
macmd-core/: Cargo.toml
macmd-core/.claude-flow/data/: pending-insights.jsonl
macmd-core/benches/: markdown_bench.rs
macmd-core/src/markdown/: mod.rs  render.rs  tests.rs
macmd-editor/: package.json  rollup.config.js  tsconfig.json
macmd-editor/src/: bridge.ts  editor.test.ts  editor.ts  index.ts  markdown-styles.ts  reading-mode.ts  theme.ts
macmd-editor/tests/: editor-real.spec.ts
macmd-tests/features/: file-saving.feature  fluid-mode-editing.feature  opening-files.feature  reading-mode.feature  sidebar-open-files.feature  theme-appearance.feature  window-restoration.feature  workspace-layout.feature
macmd-tests/swift-tests/: DocumentModelTests.swift  WorkspaceTests.swift
madmac-app/: Info.plist  project.yml
madmac-app/Resources/: AppIcon.icns
madmac-core/src/: lib.rs
madmac-editor/: package.json  playwright.config.ts  rollup.config.js  vitest.config.ts
madmac-editor/src/: bridge.ts  editor.test.ts  editor.ts  index.ts  markdown-styles.ts  reading-mode.ts  theme.ts
scripts/: build.sh  integration-test.sh  release.sh  smoke-test.sh  test-swift.sh
test-files/: demo.md  diagram-demo.md
(+36 files in other folders)
